@@ -263,6 +263,7 @@ delete-core-tooltip-body=Delete this hex core.
 delete-core-confirmation=DELETE HEX CORE?
 supercharge-tooltip-header=Supercharge
 supercharge-tooltip-body=Make the remaining resources of this hex infinite.
+upgrade-quality-tooltip-header=Upgrade Quality
 trades-quality-info=The quality selected above does not affect the qualities that can be traded. It's only for reference.
 trades-quality-warning=Coins in trade inputs are __1__% higher for this quality.
 
